Fix text + remove redundant fields on bundles